this is the last updates

--- a/Cookies_local_storage/0-index.html
+++ b/Cookies_local_storage/0-index.html
@@ -1,15 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="./src/index.js"></script>
-</head>
-<body>
-    <input type="text" id="firstname">
-    <input type="text" id="email">
+    <script>
+      function setCookies() {
+        const firstname = document.getElementById("firstname");
+        const email = document.getElementById("email");
+        console.log(firstname.value);
+        console.log(email.value);
+
+        if (firstname.value && email.value) {
+          document.cookie =
+            "firstname=" +
+            firstname.value +
+            ";" +
+            "email=" +
+            email.value +
+            ";" +
+            "expires=Thu, 18 Dec 2025 12:00:00 UTC";
+          console.log(document.cookie);
+        } else {
+          console.error("Error: Firstname and email are required");
+        }
+      }
+
+      function showCookies() {
+        const p = document.createElement("p");
+        p.innerHTML = document.cookie;
+        document.body.appendChild(p);
+        console.log(document.cookie);
+      }
+    </script>
+  </head>
+  <body>
+    <input type="text" id="firstname" />
+    <input type="text" id="email" />
     <button onclick="setCookies()">setCookies</button>
     <button onclick="showCookies()">showCookies</button>
-</body>
+  </body>
 </html>
